testdata/typechecker/error/classes/portfolio_DupeClassName.java
// Tests that duplicate class names error.

int main() {
    return 0;
}

class DupeClassNameClass {

}

class DupeClassNameClass {

}
